--- a/PlazoFijoSistem/Views/Plazos/Details.cshtml
+++ b/PlazoFijoSistem/Views/Plazos/Details.cshtml
@@ -22,6 +22,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Dias)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Bancos)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Bancos)
+        </dd>
     </dl>
 </div>
 <div>
