el authorize salio de 10 :D

--- a/PlazoFijoSistem/Views/Shared/_Layout.cshtml
+++ b/PlazoFijoSistem/Views/Shared/_Layout.cshtml
@@ -22,6 +22,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Index">Home</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Bancos" asp-action="Index">Bancos</a>
+                        </li>
                     </ul>
                 </div>
             </div>
