--- a/PlazoFijoSistem/Views/Plazos/Create.cshtml
+++ b/PlazoFijoSistem/Views/Plazos/Create.cshtml
@@ -23,9 +23,12 @@
                 <span asp-validation-for="Dias" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Bancos" class="control-label"></label>
-                <input asp-for="Bancos" class="form-control" />
-                <span asp-validation-for="Bancos" class="text-danger"></span>
+                <label asp-for="BancoId" class="control-label"></label>
+                <select asp-for="BancoId" class ="form-control" asp-items="ViewBag.BancoId"></select>
+            </div>
+            <div class="form-group">
+                <label asp-for="UsuarioId" class="control-label"></label>
+                <select asp-for="UsuarioId" class ="form-control" asp-items="ViewBag.UsuarioId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
