--- a/PlazoFijoSistem/Views/Plazos/Delete.cshtml
+++ b/PlazoFijoSistem/Views/Plazos/Delete.cshtml
@@ -24,10 +24,16 @@
             @Html.DisplayFor(model => model.Dias)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Bancos)
+            @Html.DisplayNameFor(model => model.Banco)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Bancos)
+            @Html.DisplayFor(model => model.Banco.id)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Usuario)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Usuario.Id)
         </dd>
     </dl>
     
