--- a/PlazoFijoSistem/Views/Plazos/Edit.cshtml
+++ b/PlazoFijoSistem/Views/Plazos/Edit.cshtml
@@ -24,9 +24,14 @@
                 <span asp-validation-for="Dias" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Bancos" class="control-label"></label>
-                <input asp-for="Bancos" class="form-control" />
-                <span asp-validation-for="Bancos" class="text-danger"></span>
+                <label asp-for="BancoId" class="control-label"></label>
+                <select asp-for="BancoId" class="form-control" asp-items="ViewBag.BancoId"></select>
+                <span asp-validation-for="BancoId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="UsuarioId" class="control-label"></label>
+                <select asp-for="UsuarioId" class="form-control" asp-items="ViewBag.UsuarioId"></select>
+                <span asp-validation-for="UsuarioId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
