terminado tema de cookies, roles

--- a/PlazoFijoSistem/Views/Shared/_Layout.cshtml
+++ b/PlazoFijoSistem/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Bancos" asp-action="Index">Bancos</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Plazos" asp-action="Index">Plazos</a>
+                        </li>
                     </ul>
                 </div>
             </div>
