--- a/PlazoFijoSistem/Views/Plazos/Index.cshtml
+++ b/PlazoFijoSistem/Views/Plazos/Index.cshtml
@@ -7,7 +7,10 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">¡Registra tu plazo!</a>
+</p>
+<p>
+    <a asp-action="Calcular">Calcular</a>
 </p>
 <table class="table">
     <thead>
