--- a/PlazoFijoSistem/Views/Shared/_Layout.cshtml
+++ b/PlazoFijoSistem/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Plazos" asp-action="Index">Plazos</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Logout" asp-action="Index">Cerrar Sesion</a>
+                        </li>
                     </ul>
                 </div>
             </div>
