--- a/PlazoFijoSistem/Views/Usuarios/Details.cshtml
+++ b/PlazoFijoSistem/Views/Usuarios/Details.cshtml
@@ -1,4 +1,6 @@
-﻿@model PlazoFijoSistem.Models.Usuarios
+﻿
+@model PlazoFijoSistem.Models.Usuarios
+
 
 @{
     ViewData["Title"] = "Details";
@@ -34,6 +36,10 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Password)
         </dd>
+       
+      
+        
+
     </dl>
 </div>
 <div>
