--- a/PlazoFijoSistem/Views/Usuarios/Details.cshtml
+++ b/PlazoFijoSistem/Views/Usuarios/Details.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model PlazoFijoSistem.Models.Usuarios
+@model IEnumerable<PlazoFijoSistem.Models.Plazos>
 
 
 @{
@@ -13,36 +13,70 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Apellido)
+            @Html.DisplayNameFor(model => model.Usuario.Apellido)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Apellido)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Nombre)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Nombre)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Password)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Password)
-        </dd>
        
-      
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Usuario.Nombre)
+        </dt>
+        
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Usuario.Email)
+        </dt>
+
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Banco.RazonSocial)
+        </dt>
+
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Monto)
+        </dt>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Dias)
+        </dt>
+        
+        @foreach (var item in Model)
+        {
+            <dt class = "col-sm-2">
+            @Html.DisplayFor(modelItem => item.Usuario.Apellido)
+        </dt>
+       
+        <dt class = "col-sm-2">
+            @Html.DisplayFor(modelItem => item.Usuario.Nombre)
+        </dt>
+        
+        <dt class = "col-sm-2">
+            @Html.DisplayFor(modelItem => item.Usuario.Email)
+        </dt>
+
+        <dt class = "col-sm-2">
+
+
+            @Html.DisplayFor(modelItem => item.Banco.RazonSocial)
+
+
+        </dt>
+
+        <dt class = "col-sm-2">
+
+
+            @Html.DisplayFor(modelItem => item.Monto)
+
+
+        </dt>
+        <dt class = "col-sm-2">
+
+            @Html.DisplayNameFor(model => model.Dias)
+
+        </dt>
+        }
+
+       
         
 
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
+    
     <a asp-action="Index">Back to List</a>
 </div>
