--- a/PlazoFijoSistem/Views/Shared/_Layout.cshtml
+++ b/PlazoFijoSistem/Views/Shared/_Layout.cshtml
@@ -29,6 +29,12 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Plazos" asp-action="Index">Plazos</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Usuarios" asp-action="Index">Usuarios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="Index">CustomerAdmin</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Logout" asp-action="Index">Cerrar Sesion</a>
                         </li>
                     </ul>
